k8s/bases/infrastructure/controllers/kyverno/namespace-umami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
